oxiplate-derive/tests/broken/char/escaped-eof.stderr
error: Expected `\'`, `\\`, or a single char followed by `'`.
 --> tests/broken/char/escaped-eof.rs:4:25
  |
4 | #[oxiplate_inline(r"{{ '\")]
  |                         ^
